# tts-skill

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml  test.yml
docs/: _config.yml  index.md
tests/: conftest.py  test_cli.py  test_config.py  test_infer.py  test_setup_env.py  test_transcribe.py  test_utils.py  test_webui.py
tts_skill/: __init__.py  __main__.py  cli.py  config.py  infer.py  setup_env.py  transcribe.py  utils.py  webui.py
